<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/twitter"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/twitter"/>
    <item
        android:id="@+id/facebook"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/facebook"/>
    <item
        android:id="@+id/rateApp"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/rate"/>
    <item
        android:id="@+id/email"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/email"/>
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"/>-->
</menu>
